--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
     "css-loader": "^3.4.2",
-    "electron": "8.0.1",
+    "electron": "^8.0.1",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.1",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
